# oxidized_copper

./: .gitignore  Cargo.toml  justfile
crates/bump/: Cargo.toml
crates/bump/src/: lib.rs  main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  manifest.rs
crates/init/: Cargo.toml
crates/init/src/: lib.rs  nvr.rs  ts_starter.rs
crates/init/templates/nvr/: README.md.tmpl  esbuild.config.mjs
crates/init/templates/ts-starter/: .gitignore  README.md.tmpl  esbuild.config.mjs  justfile  justfile.tmpl  package.json  package.json.tmpl  tsconfig.json
crates/init/templates/ts-starter/behavior_packs/pack0/: manifest.json.tmpl
crates/init/templates/ts-starter/resource_packs/pack1/: manifest.json.tmpl
crates/init/templates/ts-starter/scripts/: main.ts
crates/link/: Cargo.toml
crates/link/src/: lib.rs
crates/transpile/: Cargo.toml
crates/transpile/mojang/: test.js
crates/transpile/scripts/: test.ts
crates/transpile/src/: lib.rs
installer/: setup.iss
test/example_pack/behavior_packs/pack0/: manifest.json
test/example_pack/resource_packs/pack0/: manifest.json
