[package]
name = "oxidized_copper"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/core",
    "crates/cli",
    "crates/bump",
]

[lib]
name = "mcbe_core"
path = "./crates/core/src/lib.rs"

resolver = "2"

[workspace.dependencies]
walkdir = "2.5.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
